# cfa-mkdocs-template

./: 404.html  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  requirements.txt
.github/actions/mkdocs-build/: action.yaml
.github/workflows/: mkdocs-build.yaml  mkdocs-deploy.yaml  mkdocs.yaml
api/: index.html
docs/: api.md  index.md
search/: search_index.json
