[tool.poetry]
name = "mkdtemp"
version = "0.1.0"
description = ""
authors = ["Scott Olesen <ulp7@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.28.0"}
mkdocs-material = "^9.6.4"
mdx-truly-sane-lists = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
