[project]
name = "mkdtemp"
version = "0.2.0"
description = ""
authors = [{ name = "Scott Olesen", email = "ulp7@cdc.gov" }]
requires-python = ">=3.10"
readme = "README.md"

[dependency-groups]
mkdocs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.4",
    "mkdocstrings[python]>=0.28.0",
    "mdx-truly-sane-lists>=1.3",
]

[tool.uv]
default-groups = ["mkdocs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
